--- a/templates/base.html
+++ b/templates/base.html
@@ -110,10 +110,14 @@
 
     <footer class="footer mt-auto py-3">
         <p class="social-links text-center">
-            <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i>
+            <i class="fab fa-facebook-square ms-3" target="_blank"
+                            aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener">></i>
+            <i class="fab fa-twitter-square ms-3"> target="_blank"
+                            aria-label="Visit our Twitter page (opens in a new tab)" rel="noopener"></i>
+            <i class="fab fa-instagram-square ms-3"> target="_blank"
+                            aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"></i>
+            <i class="fab fa-youtube-square ms-3"> target="_blank"
+                            aria-label="Visit our Youtube page (opens in a new tab)" rel="noopener"></i>
         </p>
     </footer>
 
