--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 <body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
-     
+
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">foodie</span></a>
@@ -110,20 +110,28 @@
 
     <footer class="footer mt-auto py-3">
         <p class="social-links text-center">
-            <i class="fab fa-facebook-square ms-3" target="_blank"
-                            aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener">></i>
-            <i class="fab fa-twitter-square ms-3"> target="_blank"
-                            aria-label="Visit our Twitter page (opens in a new tab)" rel="noopener"></i>
-            <i class="fab fa-instagram-square ms-3"> target="_blank"
-                            aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"></i>
-            <i class="fab fa-youtube-square ms-3"> target="_blank"
-                            aria-label="Visit our Youtube page (opens in a new tab)" rel="noopener"></i>
+            <a class="ms-3 text-decoration-none" href="https://www.facebook.com" target="_blank"
+                aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener">
+                <i class="fab fa-facebook-square"></i>
+            </a>
+            <a class="ms-3 text-decoration-none" href="https://www.twitter.com" target="_blank"
+                aria-label="Visit our Twitter page (opens in a new tab)" rel="noopener">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+            <a class="ms-3 text-decoration-none" href="https://www.instagram.com" target="_blank"
+                aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener">
+                <i class="fab fa-instagram-square"></i>
+            </a>
+            <a class="ms-3 text-decoration-none" href="https://www.youtube.com" target="_blank"
+                aria-label="Visit our Youtube page (opens in a new tab)" rel="noopener">
+                <i class="fab fa-youtube-square"></i>
+            </a>
         </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-        </script>
+    </script>
 
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
