--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
     <title>foodie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- SEO meta tags -->
+    <meta name="title" content="foodie - Share & Discover Delicious Recipes">
+    <meta name="description" content="foodie is your ultimate recipe sharing platform! Discover, share, and save delicious recipes from home cooks worldwide.">
+
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -28,7 +32,10 @@
 
     <!-- Bootstrap Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://res.cloudinary.com/dvlv3ptj8/image/upload/v1750946715/favicon-32x32_j2xkjr.png"
+        type="image/png">
 
 </head>
 
