--- a/recipes/templates/recipes/recipe_detail/partials/recipe_ingredients.html
+++ b/recipes/templates/recipes/recipe_detail/partials/recipe_ingredients.html
@@ -1,7 +1,9 @@
 <h3 class="mt-4">Ingredients</h3>
 <div class="border-bottom mb-4"></div>
 <ul class="list-group list-group-flush">
+    <!-- Loop through each ingredient -->
     {% for ingredient in recipe.ingredients.all %}
+    <!-- Display each ingredient quantity and name -->
     <li class="list-group-item">{{ ingredient.quantity }} {{ ingredient.name }}</li>
     {% endfor %}
 </ul>
