--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Update Profile - foodie{% endblock %}
 {% load crispy_forms_tags %}
 {% load profile_tags %}
 
