--- a/recipes/templates/recipes/recipe_form/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form/recipe_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Share a Recipe - foodie{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
