Fixed duplicate Boostrap import from comments section

--- a/recipes/templates/recipes/recipe_detail/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail/recipe_detail.html
@@ -30,3 +30,9 @@
 </div>
 
 {% endblock %}
+
+<!-- JavaScript Includes -->
+{% block scripts %}
+{{ block.super }}  <!-- Include JS from base.html -->
+<script src="{% static 'js/comments.js' %}"></script>
+{% endblock %}
