Added equipment section to recipe detail

--- a/recipes/templates/recipes/recipe_detail/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail/recipe_detail.html
@@ -14,6 +14,7 @@
             <div class="recipe-content">
                 {% include "recipes/recipe_detail/partials/recipe_header.html" %}
                 {% include "recipes/recipe_detail/partials/recipe_description.html" %}
+                {% include "recipes/recipe_detail/partials/recipe_equipment.html" %}
                 {% include "recipes/recipe_detail/partials/recipe_ingredients.html" %}
                 {% include "recipes/recipe_detail/partials/recipe_instructions.html" %}
                 {% include "recipes/recipe_detail/partials/comments_section.html" %}
