Added recipe titles to RecipeView, styling changes to comment edit/del btns, cooking timer margin changes

--- a/recipes/templates/recipes/index.html
+++ b/recipes/templates/recipes/index.html
@@ -50,7 +50,7 @@
                                     <p class="card-text">{{ recipe.description|truncatewords:20 }}</p>
                                 </div>
                                 <!-- Cooking Time Display-->
-                                <p><i class="fas fa-stopwatch"></i> {{ recipe.total_time }} mins</p>
+                                <p class="mt-auto mb-0"><i class="fas fa-stopwatch"></i> {{ recipe.total_time }} mins</p>
                             </div>
                         </div>
                     </div>
