--- a/recipes/templates/recipes/recipe_detail/partials/recipe_header.html
+++ b/recipes/templates/recipes/recipe_detail/partials/recipe_header.html
@@ -8,10 +8,10 @@
     <!-- Recipe Content Section -->
     <div class="card-body">
         <!-- Recipe Title -->
-        <h1 class="card-title">{{ recipe.title }}</h1>
+        <h1 class="card-title mb-4">{{ recipe.title }}</h1>
         
         <!-- Recipe Times Section -->
-        <div class="recipe-meta mb-4">
+        <div class="recipe-meta">
             <div class="row">
                 <!-- Preparation Time -->
                 <div class="col-md-4">
