--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -26,7 +26,7 @@
                 {{ profile_form|crispy }}
                 
                 <!-- Form Submission Button -->
-                <button type="submit" class="btn btn-outline-secondary mt-3 mb-4">Update Profile</button>
+                <button type="submit" class="btn btn-outline-success mt-3 mb-4">Update Profile</button>
             </form>
         </div>
 
